# Qt_ChatWgtDemo

./: CMakeLists.txt  chatwgtmain.cpp  chatwgtmain.h  icon.rc  main.cpp  mainwindow_test.cpp  mainwindow_test.h  mainwindow_test.ui  qrc.qrc
ChatWgt/: chatwgt.cpp  chatwgt.h  chatwgt.ui  chatwgtmgr.cpp  chatwgtmgr.h
ChatWgtItems/: abstractionchatwgtitem.cpp  abstractionchatwgtitem.h  abstractionchatwgtitemmgr.cpp  abstractionchatwgtitemmgr.h  chatreceivewgtitem.cpp  chatreceivewgtitem.h  chatreceivewgtitem.ui  chatsendwgtitem.cpp  chatsendwgtitem.h  chatsendwgtitem.ui  chatwgtitem.cpp  chatwgtitem.h  chatwgtitem.ui  chatwgtitemmgr.cpp  chatwgtitemmgr.h
